# SIGEA

./: .env  .env.example  AI_RULES.md  App.tsx  DEPLOYMENT.md  README.md  app.json  capacitor.config.ts  constants.tsx  index.html  index.tsx  manifest.json  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  robots.txt  supabaseClient.ts  sw.js  tailwind.config.js  types.ts  vercel.json  vite.config.ts  vite.config.ts.timestamp-1768093528829-577b3b70af217.mjs
cadastro/: index.html
certificado/: index.html
checkin/: index.html
components/: AIAssistant.tsx  AIAssistantModal.tsx  ActionSheet.tsx  AlertDialog.tsx  BottomNav.tsx  BottomNavBar.tsx  CertificateCard.tsx  CertificateTemplateEditor.tsx  CertificateWidget.tsx  ContextMenu.tsx  EventCard.tsx  FloatingActionButton.tsx  FullEventCard.tsx  Header.tsx  Icon.tsx  IfalLogo.tsx  Layout.tsx  Logo.tsx  MainHeader.tsx  NotificationDrawer.tsx  NotificationItem.tsx  NotificationPermissionModal.tsx  PageHeader.tsx  PortalBrowser.tsx  ProfileGroup.tsx  ProfileMenuItem.tsx  ProgressBar.tsx  QrCodeGenerator.tsx  QrScanner.tsx  SearchBar.tsx  Sidebar.tsx  StatCard.tsx  ThemeModal.tsx  ToggleSwitch.tsx  WhatsAppButton.tsx
linux/: CMakeLists.txt  main.cc  sigea.desktop
linux/auth/: auth_service_linux.cc
linux/supabase/: supabase_linux.cc
linux/ui/: ui_linux.cc
src/: App.tsx  (+5 more)
windows/: CMakeLists.txt  installer.nsh
windows/auth/: AuthService.cpp  AuthService.h
windows/runner/: main.cpp
windows/supabase/: SupabaseBridge.cpp  SupabaseBridge.h
windows/ui/: UIController.cpp  UIController.h
(+224 files in other folders)
